; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/android/extr_ashmem.c_ashmem_open.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/android/extr_ashmem.c_ashmem_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { %struct.ashmem_area* }
%struct.ashmem_area = type { i32, i32, i32 }

@ashmem_area_cachep = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@ASHMEM_NAME_PREFIX = common dso_local global i32 0, align 4
@ASHMEM_NAME_PREFIX_LEN = common dso_local global i32 0, align 4
@PROT_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @ashmem_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ashmem_open(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca %struct.ashmem_area*, align 8
  %7 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  %8 = load %struct.inode*, %struct.inode** %4, align 8
  %9 = load %struct.file*, %struct.file** %5, align 8
  %10 = call i32 @generic_file_open(%struct.inode* %8, %struct.file* %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* %7, align 4
  store i32 %14, i32* %3, align 4
  br label %40

15:                                               ; preds = %2
  %16 = load i32, i32* @ashmem_area_cachep, align 4
  %17 = load i32, i32* @GFP_KERNEL, align 4
  %18 = call %struct.ashmem_area* @kmem_cache_zalloc(i32 %16, i32 %17)
  store %struct.ashmem_area* %18, %struct.ashmem_area** %6, align 8
  %19 = load %struct.ashmem_area*, %struct.ashmem_area** %6, align 8
  %20 = icmp ne %struct.ashmem_area* %19, null
  br i1 %20, label %24, label %21

21:                                               ; preds = %15
  %22 = load i32, i32* @ENOMEM, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %3, align 4
  br label %40

24:                                               ; preds = %15
  %25 = load %struct.ashmem_area*, %struct.ashmem_area** %6, align 8
  %26 = getelementptr inbounds %struct.ashmem_area, %struct.ashmem_area* %25, i32 0, i32 2
  %27 = call i32 @INIT_LIST_HEAD(i32* %26)
  %28 = load %struct.ashmem_area*, %struct.ashmem_area** %6, align 8
  %29 = getelementptr inbounds %struct.ashmem_area, %struct.ashmem_area* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* @ASHMEM_NAME_PREFIX, align 4
  %32 = load i32, i32* @ASHMEM_NAME_PREFIX_LEN, align 4
  %33 = call i32 @memcpy(i32 %30, i32 %31, i32 %32)
  %34 = load i32, i32* @PROT_MASK, align 4
  %35 = load %struct.ashmem_area*, %struct.ashmem_area** %6, align 8
  %36 = getelementptr inbounds %struct.ashmem_area, %struct.ashmem_area* %35, i32 0, i32 0
  store i32 %34, i32* %36, align 4
  %37 = load %struct.ashmem_area*, %struct.ashmem_area** %6, align 8
  %38 = load %struct.file*, %struct.file** %5, align 8
  %39 = getelementptr inbounds %struct.file, %struct.file* %38, i32 0, i32 0
  store %struct.ashmem_area* %37, %struct.ashmem_area** %39, align 8
  store i32 0, i32* %3, align 4
  br label %40

40:                                               ; preds = %24, %21, %13
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @generic_file_open(%struct.inode*, %struct.file*) #1

declare dso_local %struct.ashmem_area* @kmem_cache_zalloc(i32, i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
